--- a/src/components/Details.css
+++ b/src/components/Details.css
@@ -1,3 +1,10 @@
+.Details {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+}
+
 .Details .back-drop {
   position: fixed;
   top: 0;
