--- a/src/components/Header.css
+++ b/src/components/Header.css
@@ -1,3 +1,20 @@
 .Header {
+  width: 100%;
+  height: 125px;
   background-image: url("/src/assets/header-image.jpg");
+  background-size: auto;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+}
+
+.Header a {
+  color: white;
+  padding: 20px;
+  text-decoration: none;
+}
+
+.Header a:hover {
+  color: lightseagreen;
+  cursor: pointer;
 }
