--- a/src/components/Footer.css
+++ b/src/components/Footer.css
@@ -1,12 +1,17 @@
 .Footer {
-  background-color: black;
-  color: white;
+  width: 100%;
+  position: fixed;
+  bottom: 0;
+  left: 0;
+  background-image: url("/src/assets/header-bg-image.jpg");
   display: flex;
   justify-content: space-between;
   align-items: center;
+  color: white;
 }
 
 .Footer img {
+  width: 25%;
   padding: 10px;
 }
 
