--- a/src/components/Header.css
+++ b/src/components/Header.css
@@ -4,12 +4,14 @@
   background-image: url("/src/assets/header-bg-image.jpg");
   background-size: auto;
   display: flex;
-  justify-content: space-between;
+  flex-direction: column;
+  justify-content: space-evenly;
   align-items: center;
 }
 
 .Header img {
-  width: 33%;
+  width: 250px;
+  /* margin-bottom: 10px; */
 }
 
 .Header a {
@@ -25,4 +27,15 @@
 
 .Header i {
   font-size: 20px;
+}
+
+@media only screen and (min-width: 768px) {
+  .Header {
+    flex-direction: row;
+    justify-content: space-between;
+  }
+
+  /* .Header img {
+    margin-bottom: 0;
+  } */
 }
