--- a/src/components/MovieList.css
+++ b/src/components/MovieList.css
@@ -2,5 +2,12 @@
   display: flex;
   justify-content: center;
   align-items: center;
-  flex-wrap: wrap;
+  flex-direction: column;
+}
+
+@media only screen and (min-width: 768px) {
+  .MovieList {
+    flex-wrap: wrap;
+    flex-direction: row;
+  }
 }
