--- a/src/components/WatchList.css
+++ b/src/components/WatchList.css
@@ -1,10 +1,11 @@
 .WatchList {
-  height: 100vh;
+  height: 100%;
   background-color: black;
   color: white;
   display: flex;
   flex-direction: column;
   align-items: center;
+  margin-bottom: 60px;
 }
 
 .WatchList h2 {
@@ -13,9 +14,9 @@
 
 .WatchList ul {
   display: flex;
+  flex-direction: column;
   justify-content: center;
   align-items: center;
-  flex-wrap: wrap;
 }
 
 .WatchList li {
@@ -27,4 +28,19 @@
   justify-content: space-around;
   align-items: center;
   text-align: center;
+}
+
+@media only screen and (min-width: 768px) {
+  /* .WatchList {
+  
+} */
+
+  .WatchList ul {
+    flex-wrap: wrap;
+    flex-direction: row;
+  }
+
+  /* .WatchList li {
+  
+} */
 }
