--- a/src/components/Details.css
+++ b/src/components/Details.css
@@ -14,7 +14,7 @@
   width: 100%;
   height: 100%;
   object-fit: cover;
-  opacity: 50%;
+  opacity: 66%;
 }
 
 .Details .poster {
@@ -23,25 +23,33 @@
 }
 
 .Details h2 {
-  font-size: 80px;
+  font-size: 50px;
+  font-weight: bold;
 }
+
 .Details p {
   font-size: larger;
   font-weight: bold;
-  width: 50%;
-  margin: 5px;
+  width: 500px;
+  margin: 10px;
 }
 
-.Details a:hover,
-.Details i:hover {
-  color: lightblue;
-  cursor: pointer;
+.Details .Stars {
+  height: 32px;
 }
 
 .Details .addWL {
   color: lightgreen;
+  margin: 10px;
 }
 
 .Details .removeWL {
   color: lightcoral;
+  margin: 10px;
+}
+
+.Details a:hover,
+.Details i:hover {
+  color: lightskyblue;
+  cursor: pointer;
 }
