--- a/src/components/SearchForm.css
+++ b/src/components/SearchForm.css
@@ -4,22 +4,21 @@
 }
 
 .SearchForm p {
-  background-color: teal;
-  border: solid 2px white;
+  background-color: lightseagreen;
+  border: 2px solid white;
   margin: 2px;
   padding: 5px;
   border-radius: 5px;
 }
 
 .SearchForm p:hover {
-  background-color: lightcoral;
+  background-color: dodgerblue;
   color: black;
   cursor: pointer;
 }
 
 .SearchForm .selected {
   background-color: lightcoral;
-  color: black;
 }
 
 .SearchForm .filterBy {
@@ -41,5 +40,5 @@
 
 .SearchForm button:hover {
   color: white;
-  background-color: lightskyblue;
+  background-color: dodgerblue;
 }
