--- a/src/components/Header.css
+++ b/src/components/Header.css
@@ -11,6 +11,7 @@
 
 .Header img {
   width: 250px;
+  margin-left: 20px;
 }
 
 .Header img:hover {
@@ -19,7 +20,7 @@
 
 .Header a {
   color: white;
-  margin: 20px;
+  margin-right: 20px;
   text-decoration: none;
 }
 
